Native/Test/KL/assign-to-rvalue-arg.kl
function foo( in Integer rval )
{
  rval = rval;
}
